cmake_minimum_required(VERSION 2.6)
project(threadpool)
enable_testing()
set(CMAKE_BUILD_TYPE "Debug")
set(CXX_FLAGS "-g -Wall -Wextra -std=c++11")
message(STATUS ${CXX_FLAGS})
string(REPLACE ";" " " CMAKE_CXX_FLAGS ${CXX_FLAGS})
set(CMAKE_CXX_COMPILER "clang++")
set(CMAKE_CXX_FLAGS_DEBUG "-O0")
set(CMAKE_CXX_FLAGS_RELEASE "-O2 -DNDEBUG")
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
include_directories(${PROJECT_SOURCE_DIR})
string(TOUPPER ${CMAKE_BUILD_TYPE} BUILD_TYPE)
message(STATUS "CXX_FLAGS = " ${CMAKE_CXX_FLAGS} " " ${CMAKE_CXX_FLAGS_${BUILD_TYPE}})

file(GLOB SRC *.h *.cpp)

ADD_EXECUTABLE(threadpool ${SRC})